--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ add_executable(${THIS_PROJECT}
     ./source/FileDownload.cpp
     ./source/VideoToTexture.cpp
     ./source/DaytimeDisplay.cpp
+    ./source/NightDisplay.cpp
 )
 
 set_property(TARGET ${THIS_PROJECT} PROPERTY CXX_STANDARD 17)
